# mcp

./: .gitignore  ARCHITECTURE_ANALYSIS.md  Task-Manager-Server.md  references.txt
.cursor/memory/: insights.md  map.json
.cursor/overview/: summary.md
.cursor/rules/: core-thinking-principles.mdc  dev_workflow.mdc  taskmaster.mdc
.cursor/tasks/: backlog.md
.cursor/tasks/sprint_1/: task_001.md  task_002.md  task_006.md
codex-cli-custom/: .gitignore  AGENTS.md  CONTRIBUTING.md  INTEGRATION_ANALYSIS.md  STATUS_SUMMARY.md  TESTING_GUIDE.md  package.json  pnpm-lock.yaml  push.sh  requirements.txt  setup-local-middleware.js  test_codex_integration.cmd  test_codex_integration.sh  test_lm_studio.sh  test_lm_studio_with_tools.sh
codex-cli-custom/.codex/: (full-output)Structure-and-Setup.md  .bashrc  config.json  config.yml  task.yml
codex-cli-custom/.cursor/: mcp.json
codex-cli-custom/.cursor/rules/: code-guidelines.mdc  project-management-and-setup.mdc  riper-cognition-workflow-framework.mdc
codex-cli-custom/.devcontainer/: README.md
codex-cli-custom/codex-cli/: CONTAINER_SOLUTION.md  Dockerfile  test.js
codex-cli-custom/codex-cli/scripts/: run_in_container.sh  test_container.sh
codex-cli-custom/codex-cli/src/utils/: providers.ts
codex-cli-custom/codex-rs/: Cargo.toml
codex-cli-custom/codex-rs/http-server/: Cargo.toml  README.md  SETUP.md  start_server.sh  test_client.py
codex-cli-custom/codex-rs/http-server/src/: main.rs
codex-cli-custom/setup/: entry.sh  node.sh  post-task.sh  windows.ps1
codex-cli-custom/tests/: test_tools.py
codex-cli-custom/tests/fixtures/: ddg_example.json
codex-cli-custom/tests/stubs/: duckduck_stub.py
project-state/: current-status.json
task-manager-client/: LM_STUDIO_SETUP.md  README.md  api_server.py  client.py  lm_studio_tools.py  openai_middleware.py  pyproject.toml  test_client.py
task-manager-server/: README.md  main.py  pyproject.toml  server.py  task-manager.py  tasks_db.py
