[project]
name = "task-manager-server"
version = "0.1.0"
description = "Canonical MCP Task Manager Server using Official Python SDK"
authors = [
    {name = "MCP Developer"}
]
dependencies = [
    "mcp",
    "pydantic",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]